--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "0.2.2"
+version = "1.0.0-rc1"
 group = "com.supermobtracker"
 archivesBaseName = "supermobtracker"
 
