--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0.0-rc4"
+version = "1.0.0"
 group = "com.supermobtracker"
 archivesBaseName = "supermobtracker"
 
