--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: spellcaster-archives-jar
+          name: supermobtracker-jar
           path: build/libs/*.jar
 
       - name: Publish GitHub Release (tags only)
