Add mob drops window with statistical sampling

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
           echo "Generated release notes:" >&2
           sed 's/^/  /' "$NOTES_FILE" >&2
           gh release create "$TAG" build/libs/*.jar \
-            --title "Super Mob Tracer $TAG" \
+            --title "Super Mob Tracker $TAG" \
             --notes-file "$NOTES_FILE" \
             $(if [[ "$TAG" =~ [ab]|rc|pre ]]; then echo "--prerelease"; fi)
 
